[project]
name = "fmcg-risk-compliance-audit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
]
dependencies = [
    "google-generativeai>=0.8.5",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.1"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
